// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete /> Snapshots should match with a full width component 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #41414A;
}

.c2 {
  width: 100%;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #41414A;
  border: none;
  font-family: Open Sans,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #41414A;
}

.c4:focus + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c4:disabled {
  cursor: not-allowed;
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c4::-webkit-input-placeholder {
  color: #9898A6;
}

.c4::-moz-placeholder {
  color: #9898A6;
}

.c4:-ms-input-placeholder {
  color: #9898A6;
}

.c4::placeholder {
  color: #9898A6;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  width: 100%;
}

.c3 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with default component 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #41414A;
}

.c2 {
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #41414A;
  border: none;
  font-family: Open Sans,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #41414A;
}

.c4:focus + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c4:disabled {
  cursor: not-allowed;
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c4::-webkit-input-placeholder {
  color: #9898A6;
}

.c4::-moz-placeholder {
  color: #9898A6;
}

.c4:-ms-input-placeholder {
  color: #9898A6;
}

.c4::placeholder {
  color: #9898A6;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  width: auto;
}

.c3 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with full width options list 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #41414A;
}

.c2 {
  width: 100%;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #41414A;
  border: none;
  font-family: Open Sans,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #41414A;
}

.c4:focus + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c4:disabled {
  cursor: not-allowed;
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c4::-webkit-input-placeholder {
  color: #9898A6;
}

.c4::-moz-placeholder {
  color: #9898A6;
}

.c4:-ms-input-placeholder {
  color: #9898A6;
}

.c4::placeholder {
  color: #9898A6;
}

.c4 + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  width: 100%;
}

.c3 {
  z-index: 1;
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 label {
  color: #41414A;
  font-weight: 700;
}

.c0 {
  position: relative;
  width: 100%;
}

.c6 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 100%;
  background-color: #FFFFFF;
  border: 1px solid #41414A;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  max-height: 312px;
  overflow: hidden;
}

.c7 {
  line-height: 20px;
  list-style: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  padding: 16px 16px 16px 16px;
}

.c7:hover,
.c7:focus {
  background-color: #F5F5FA;
}

.c8 {
  color: inherit;
  background: transparent;
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <svg
          role="button"
          tabindex="0"
        />
      </div>
    </div>
    <ul
      class="c6"
    >
      <li
        class="c7"
        tabindex="0"
      >
        
        <mark
          class="c8"
        >
          s
        </mark>
        econd
      </li>
      <li
        class="c7"
        tabindex="0"
      >
        fir
        <mark
          class="c8"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with options list 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
}

.c2 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c2 svg:hover,
.c2 svg:focus {
  fill: #41414A;
}

.c2 {
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #41414A;
  border: none;
  font-family: Open Sans,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c4:focus {
  color: #41414A;
}

.c4:focus + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c4:disabled {
  cursor: not-allowed;
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c4::-webkit-input-placeholder {
  color: #9898A6;
}

.c4::-moz-placeholder {
  color: #9898A6;
}

.c4:-ms-input-placeholder {
  color: #9898A6;
}

.c4::placeholder {
  color: #9898A6;
}

.c4 + label {
  top: -1px;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  width: auto;
}

.c3 {
  z-index: 1;
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 label {
  color: #41414A;
  font-weight: 700;
}

.c0 {
  position: relative;
  width: auto;
}

.c6 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 320px;
  background-color: #FFFFFF;
  border: 1px solid #41414A;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  max-height: 312px;
  overflow: hidden;
}

.c7 {
  line-height: 20px;
  list-style: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  padding: 16px 16px 16px 16px;
}

.c7:hover,
.c7:focus {
  background-color: #F5F5FA;
}

.c8 {
  color: inherit;
  background: transparent;
  font-weight: 700;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <svg
          role="button"
          tabindex="0"
        />
      </div>
    </div>
    <ul
      class="c6"
    >
      <li
        class="c7"
        tabindex="0"
      >
        
        <mark
          class="c8"
        >
          s
        </mark>
        econd
      </li>
      <li
        class="c7"
        tabindex="0"
      >
        fir
        <mark
          class="c8"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;
